[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/MenuInterfaces/MapMenu/MapMenu.gd" type="Script" id=1]
[ext_resource path="res://src/MenuInterfaces/red.png" type="Texture" id=2]
[ext_resource path="res://src/MenuInterfaces/MapMenu/waypoint_placed.wav" type="AudioStream" id=3]
[ext_resource path="res://src/MenuInterfaces/442161__isteak__enter-button-low-robotic.wav" type="AudioStream" id=4]
[ext_resource path="res://src/SingleAudioPlayerQueue.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1280, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 720 )

[sub_resource type="CircleShape2D" id=3]

[node name="MapMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizontalSweepline" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="HorizontalAudioBorder" type="AudioStreamPlayer" parent="HorizontalSweepline"]
stream = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorizontalSweepline"]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="HorizontalSweepline/CollisionShape2D"]
rotation = -1.5708
scale = Vector2( 0.0178241, 12.1653 )
texture = ExtResource( 2 )

[node name="VerticalSweepline" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="VerticalAudioBorder" type="AudioStreamPlayer2D" parent="VerticalSweepline"]
stream = ExtResource( 4 )
volume_db = 2.0
pitch_scale = 1.2
attenuation = 0.517632

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalSweepline"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="VerticalSweepline/CollisionShape2D"]
scale = Vector2( 0.0178241, 12.1653 )
texture = ExtResource( 2 )

[node name="Crosshair" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crosshair"]
shape = SubResource( 3 )

[node name="WaypointPlacedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MarkerAudioQueue" parent="." instance=ExtResource( 5 )]
